# stm_cmake_template

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md
.travis/: build-firmware.sh
Project/: CMakeLists.txt  STM32F407.ld
Project/application/: README.md  system_stm32f4xx.c
Project/main_firmware/: main.cpp
Project/test_firmware/: ItmCoutRerouter.cpp  ItmCoutRerouter.h  main.cpp
Project/test_firmware/tests/: README.md
